--- a/BroadcastersInfra/BroadcastersInfra.csproj
+++ b/BroadcastersInfra/BroadcastersInfra.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Flunt" Version="2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="mongocsharpdriver" Version="2.12.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.0" />
   </ItemGroup>
 
